Fix pie chart flickering on toggling legend / Convert ChartWithLegend to ts

--- a/frontend/src/metabase/visualizations/components/ChartWithLegend.module.css
+++ b/frontend/src/metabase/visualizations/components/ChartWithLegend.module.css
@@ -1,6 +1,6 @@
 .ChartWithLegend {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   width: 100%;
   height: 100%;
 }
@@ -31,6 +31,11 @@
 .ChartWithLegend .Chart {
   flex-shrink: 0;
   position: relative;
+
+  svg {
+    margin-left: 50%;
+    translate: -50% 0;
+  }
 }
 
 /* SMALL */
